--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2-binary = "^2.9.9"
 django-ninja = "^1.2.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 pillow = "^10.4.0"
+requests = "^2.32.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
